{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 260,
  "lineage": "35aac613-c85f-ac05-88a8-9872b4ca224a",
  "resources": [
    {
      "module": "module.VPC-1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712705416:vpc/vpc-00e208f867faf29cb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.168.0.0/22",
            "default_network_acl_id": "acl-06052a6a86d2eef71",
            "default_route_table_id": "rtb-0d18e77e8b610a120",
            "default_security_group_id": "sg-0c4b25b425d47bb25",
            "dhcp_options_id": "dopt-08c31797ae965b1b4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00e208f867faf29cb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d18e77e8b610a120",
            "owner_id": "339712705416",
            "tags": {
              "Name": "VPC-Module"
            },
            "tags_all": {
              "Name": "VPC-Module"
            }
          }
        }
      ]
    },
    {
      "module": "module.internet-gateway-id",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712705416:internet-gateway/igw-0d26cb2873c8a3923",
            "id": "igw-0d26cb2873c8a3923",
            "owner_id": "339712705416",
            "tags": {
              "Name": "gateway-module"
            },
            "tags_all": {
              "Name": "gateway-module"
            },
            "vpc_id": "vpc-00e208f867faf29cb"
          },
          "dependencies": [
            "module.VPC-1.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a1b648e2cd533174",
            "arn": "arn:aws:ec2:ap-south-1:339712705416:instance/i-04d89e523ac26b505",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04d89e523ac26b505",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Mumbai_Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-077447983fa40f53d",
            "private_dns": "ip-10-168-2-196.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.168.2.196",
            "public_ip": "65.0.75.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c581d4843317e738",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08f21d68eaaa69a79"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e5fc15206280aa5",
            "tags": {
              "Name": "Creating First Ec2 from Modules"
            },
            "tags_all": {
              "Name": "Creating First Ec2 from Modules"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08f21d68eaaa69a79"
            ]
          },
          "dependencies": [
            "module.VPC-1.aws_vpc.vpc-1",
            "module.security-1.aws_security_group.Security",
            "module.subnet-1.aws_subnet.subnet-module"
          ]
        }
      ]
    },
    {
      "module": "module.route-table",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d26cb2873c8a3923",
            "id": "r-rtb-02d74210fbdee2bc11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02d74210fbdee2bc1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC-1.aws_vpc.vpc-1",
            "module.internet-gateway-id.aws_internet_gateway.gateway",
            "module.route-table.aws_route_table.route-table"
          ]
        }
      ]
    },
    {
      "module": "module.route-table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712705416:route-table/rtb-02d74210fbdee2bc1",
            "id": "rtb-02d74210fbdee2bc1",
            "owner_id": "339712705416",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Route-table-module"
            },
            "tags_all": {
              "Name": "Route-table-module"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e208f867faf29cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC-1.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associated",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3f4a7893cd02857",
            "route_table_id": "rtb-02d74210fbdee2bc1",
            "subnet_id": "subnet-01e5fc15206280aa5"
          },
          "dependencies": [
            "module.VPC-1.aws_vpc.vpc-1",
            "module.route-table.aws_route_table.route-table",
            "module.subnet-1.aws_subnet.subnet-module"
          ]
        }
      ]
    },
    {
      "module": "module.security-1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712705416:security-group/sg-08f21d68eaaa69a79",
            "description": "Allowing HTTP and HTTPS and SSH and Custom ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "0",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f21d68eaaa69a79",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240302133049163900000001",
            "name_prefix": "terraform-",
            "owner_id": "339712705416",
            "revoke_rules_on_delete": false,
            "tags": {
              "ENV": "this is Production Environment",
              "Name": "Security-Module"
            },
            "tags_all": {
              "ENV": "this is Production Environment",
              "Name": "Security-Module"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e208f867faf29cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC-1.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-module",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:339712705416:subnet/subnet-01e5fc15206280aa5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.168.2.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e5fc15206280aa5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712705416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ENV": "this is Production Envirnnment",
              "Name": "Subnet-module"
            },
            "tags_all": {
              "ENV": "this is Production Envirnnment",
              "Name": "Subnet-module"
            },
            "vpc_id": "vpc-00e208f867faf29cb"
          },
          "dependencies": [
            "module.VPC-1.aws_vpc.vpc-1"
          ]
        }
      ]
    }
  ]
}